fixed cutoff top header

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     background-color: aqua;
     grid-column: 2;
     display: grid;
-    grid-template-rows: 40% 60%;
+    grid-template-rows: 50% 50%;
   
 }
 
@@ -83,6 +83,7 @@ body {
     background-color: white;
     display: grid;
     grid-template-columns: 2fr 1fr;
+  
    
 }
 
